<resources>
    <string name="app_name">GPM Innovation Week</string>
    <string name="configuracao_conexao_ca">msso_config.json</string>
    <string name="url_conexao_gateway">https://apigateway.gpm.solutions:8443/</string>
    <string name="url_conexao_gateway_ca">https://apigateway.gpm.solutions:8443/</string>
    <string name="url_conexao_gateway_interno">https://gpm.itec.al.gov.br:8443/</string>
    <string name="voltar">Voltar</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atencao">Atenção</string>
    <string name="sucesso">Sucesso</string>
    <string name="ok">OK</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_cadastre_se">Cadastre-se</string>
    <string name="toolbar_oca">GUIA DE SERVIÇOS</string>
    <string name="toolbar_esqueci_minha_senha">Esqueci minha senha</string>
    <string name="toolbar_meus_dados">Meus Dados</string>
    <string name="toolbar_carta_servicos">Carta de Serviços</string>
    <string name="toolbar_detran">Detran-AC</string>
    <string name="toolbar_semarh">SEMARH-AL</string>
    <string name="toolbar_atualizacao_cadastral">Atualização Cadastral</string>
    <string name="toolbar_cadastrar_dependentes">Cadastrar Dependentes</string>
    <string name="toolbar_cadastrar_cursos">Cadastrar Cursos</string>
    <string name="toolbar_gerar_dae">Gere a sua guia</string>
    <string name="toolbar_seduc">Educação</string>
    <string name="toolbar_ipaseal">Assistencia Saúde - IPASEAL</string>
    <string name="menu_gravar">&#160;&#160;Gravar</string>
    <string name="splash_label_titulo">CA CyberSecurity and API Management</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="botao_entrar">ENTRAR</string>
    <string name="botao_registrar">REGISTRE-SE NO APP DO GPM</string>
    <string name="label_manter_conectado">Mantenha-me conectado</string>
    <string name="label_entrar_mesmo_assim">Entrar mesmo assim</string>
    <string name="label_esqueci_minha_senha">Esqueci minha senha!</string>
    <string name="msg_login_email_em_branco">O campo de e-mail não pode estar em branco!</string>
    <string name="msg_login_email_invalido">O e-mail informado é inválido!</string>
    <string name="msg_login_senha_em_branco">O campo de senha não pode estar em branco!</string>
    <string name="msg_login_impossivel_validar">Impossível validar o usuário e/ou senha!</string>
    <string name="msg_login_validando_usuario">Aguarde. Validando usuário ...</string>
    <string name="msg_login_sem_conexao">Não há conexão com a internet. Por favor verifique !</string>
    <string name="msg_lembrete_impossivel_logout">Impossível entrar no aplicativo como visitante!</string>
    <string name="msg_lembrete_logout">Aguarde. Entrando como visitante ...</string>
    <string name="label_participe_gpm">Participe do GPM</string>
    <string name="label_dados_participacao">Por meio do cadastro, você concorda com nossos <b>Termos do GPM</b> e que você leu as nossas Politicas de Privacidade, incluindo o nosso uso de Cookies. Você poderá receber notificações de SMS do GPM e poderá desliga-la a qualquer momento.</string>
    <string name="botao_continuar_agora">CONTINUAR AGORA</string>
    <string name="botao_ja_possui_conta">JÁ POSSUI CONTA?</string>
    <string name="label_cadastro_nome_qual_seu_nome">Qual seu nome?</string>
    <string name="label_cadastro_nome_nome">Nome Completo</string>
    <string name="botao_cadastro_nome_continuar">CONTINUAR</string>
    <string name="msg_cadastro_nome_em_branco">O campo de nome não pode estar em branco!</string>
    <string name="label_menu_lateral_titulo">MENU</string>
    <string name="botao_menu_lateral_sair">Sair do GPM</string>
    <string name="botao_menu_lateral_meus_dados">Meus Dados</string>
    <string name="botao_menu_lateral_configuracoes">Configurações</string>
    <string name="botao_menu_lateral_ultimos_acessos">Últimos Acessos</string>
    <string name="botao_menu_lateral_suporte">Suporte</string>
    <string name="msg_detran_buscar_pontuacao">Aguarde. Buscando pontuação do motorista ...</string>
    <string name="hint_dashboard_procurar">Localizar</string>
    <string name="msg_sair_sistema">Deseja realmente sair do aplicativo?</string>
    <string name="msg_dashboard_impossivel_logout">Falha ao realizar logout do usuário!</string>
    <string name="msg_dashboard_impossivel_servicos">Falha ao obter serviços do usuário!</string>
    <string name="msg_dashboard_logout">Aguarde. Realizando logout ...</string>
    <string name="msg_dashboard_obtendo_servicos">Aguarde. Obtendo serviços ...</string>
    <string name="id_atualizacao_cadastral">atualizacaoCadastral</string>
    <string name="id_detran_pontuacao">detranPontuacao</string>
    <string name="id_sefaz_iptu">2a Via IPTU</string>
    <string name="id_seduc_primeiro_passo">Primeiro Passo</string>
    <string name="id_seduc_matricula_infantil">Matricula Infantil</string>
    <string name="id_detran_dados_veiculo">detranDadosVeiculo</string>
    <string name="nome_servico_atualizacao_cadastral">Atualização cadastral do servidor público</string>
    <string name="nome_servico_detran">Transito</string>
    <string name="nome_servico_sefaz">Impostos</string>
    <string name="nome_servico_educacao">Matricula</string>
    <string name="nome_servico_ipaseal">IPASEAL</string>
    <string name="nome_servico_semarh">SEMARH</string>
    <string name="label_cadastro_cpf_titulo">Qual seu CPF?</string>
    <string name="label_cadastro_cpf_textoCPF">Entre com seu CPF para que seu cadastro seja único e intransferível. Desta forma garantiremos mais segurança para você.</string>
    <string name="botao_cadastro_cpf_continuar">CONTINUAR</string>
    <string name="hint_cpf">CPF</string>
    <string name="msg_cadastro_cpf_em_branco">O campo de CPF não pode estar em branco!</string>
    <string name="msg_cadastro_cpf_invalido">O CPF informado é inválido!</string>
    <string name="label_cadastro_email_titulo">Qual seu e-mail?</string>
    <string name="label_cadastro_email_textoEmail">Qual seu e-mail?</string>
    <string name="label_cadastro_email_email">E-mail</string>
    <string name="label_cadastro_email_confirmarEmail">Confirmação do e-mail</string>
    <string name="label_cadastro_email_texto_lembrete">Lembre-se deste e-mail pois ele será utilizado futuramente.</string>
    <string name="botao_cadastro_email_continuar">CONTINUAR</string>
    <string name="msg_cadastro_email_em_branco">O campo de e-mail não pode estar em branco!</string>
    <string name="msg_cadastro_email_invalido">O e-mail informado é inválido!</string>
    <string name="msg_cadastro_email_conf_em_branco">O campo de confirmação de e-mail não pode estar em branco!</string>
    <string name="msg_cadastro_email_conf_invalido">A confirmação de e-mail informada é inválida!</string>
    <string name="msg_cadastro_email_nao_confere">A confirmação de e-mail, não confere com o e-mail informado!</string>
    <string name="label_cadastro_senha_titulo">Crie uma senha</string>
    <string name="label_cadastro_senha_senha">Senha</string>
    <string name="label_cadastro_senha_confirmarSenha">Confirmação da senha</string>
    <string name="label_cadastro_senha_texto_lembrete">Guarde esta senha pois ela será necessaria futuramente.</string>
    <string name="botao_cadastro_senha_continuar">CONTINUAR</string>
    <string name="msg_cadastro_senha_em_branco">O campo de senha não pode estar em branco!</string>
    <string name="msg_cadastro_senha_invalida">A senha informada é inválida!</string>
    <string name="msg_cadastro_senha_conf_em_branco">O campo de confirmação de senha não pode estar em branco!</string>
    <string name="msg_cadastro_senha_conf_invalida">A confirmação de senha informada é inválida!</string>
    <string name="msg_cadastro_senha_nao_confere">A confirmação de senha, não confere com a senha informada!</string>
    <string name="label_cadastro_nascimento_titulo">Qual sua data de nascimento?</string>
    <string name="botao_cadastro_nascimento_continuar">CONTINUAR</string>
    <string name="hint_data_nascimento">Data de nascimento</string>
    <string name="msg_cadastro_data_nascimento_em_branco">O campo de data de nascimento não pode estar em branco!</string>
    <string name="msg_cadastro_data_nascimento_invalida">A data de nascimento informada é inválida!</string>
    <string name="label_cadastro_celular_titulo">Qual o número de seu celular?</string>
    <string name="botao_cadastro_celular_continuar">CONTINUAR</string>
    <string name="hint_celular">Celular</string>
    <string name="label_cadastro_celular_texto">Informe o número de seu celular para que possamos lhe enviar dicas e novas informações sobre o APM.</string>
    <string name="msg_cadastro_celular_em_branco">O campo de celular não pode estar em branco!</string>
    <string name="msg_cadastro_celular_invalido">O celular informado é inválido!</string>
    <string name="label_cadastro_sexo_titulo">Qual seu sexo?</string>
    <string name="botao_cadastro_sexo_continuar">CONTINUAR</string>
    <string name="msg_cadastro_sexo_obtendo_identificacao">Aguarde. Obtendo identificação ...</string>
    <string name="msg_cadastro_sexo_gravando_usuario">Aguarde. Gravando dados do usuário ...</string>
    <string name="msg_cadastro_sexo_nao_selecionado">É necessário selecionar uma opção para sexo!</string>
    <string name="cadastro_sexo_masculino">Masculino</string>
    <string name="cadastro_sexo_feminino">Feminino</string>
    <string name="label_cadastro_finalizado_titulo_sucesso">Sucesso!</string>
    <string name="label_cadastro_finalizado_titulo_erro">Erro</string>
    <string name="label_cadastro_finalizado_mensagem">Dentro de alguns minutos você receberá um e-mail de confirmação em sua caixa postal. Por Favor não se esqueça de confirmar clicando no link que aparecerá no corpo deste e-mail.</string>
    <string name="botao_cadastro_finalizado_continuar">FINALIZAR</string>
    <string name="label_cadastro_fotos_falta_pouco">Agora falta pouco!</string>
    <string name="label_cadastro_fotos_mensagem_atencao">O envio de comprovação para alteração está limitado a 15 imagens por comprovante.</string>
    <string name="botao_cadastro_fotos_galeria">GALERIA</string>
    <string name="botao_cadastro_fotos_capturar">CAPTURAR</string>
    <string name="msg_atualizacao_cad_fotos_sem_camera">Seu aparelho não possui câmera!</string>
    <string name="msg_atualizacao_cad_fotos_selecione_imagem">Selecione a imagem</string>
    <string name="msg_atualizacao_cad_fotos_excluir">Deseja realmente excluir o curso selecionado?</string>
    <string name="msg_atualizacao_cad_fotos_sair">Caso você queira sair, esta opção irá cancelar o cadastramento realizado até o momento. Deseja realmente sair da atualização cadastral?</string>
    <string name="msg_atualizacao_cad_fotos_sem_fotos">É necessário ao menos uma foto para envio dos comprovantes de mudança para o servidor!</string>
    <string name="msg_atualizacao_cad_fotos_limite_fotos">O limite para envio de fotos é de 15 imagens. Por favor remova as fotos adicionais ao limite!</string>
    <string name="msg_atualizacao_cad_fotos_enviando">Aguarde. Enviando fotos ...</string>
    <string name="hint_tipo_endereco">Tipo de Endereço</string>
    <string name="hint_nome_logradouro">Logradouro</string>
    <string name="hint_numero">Número</string>
    <string name="hint_complemento">Complemento</string>
    <string name="hint_ponto_referencia">Ponto de Referência</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_telefone_contato">Telefone de Contato</string>
    <string name="hint_fixo">Fixo</string>
    <string name="msg_atualizacao_cad_enderecos_tipo_nao_selecionado">É necessário selecionar uma opção para o tipo de endereço!</string>
</resources>