<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        style="@style/AppToolbar"
        app:title="@string/toolbar_cadastre_se"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/espaco_tela"
        android:paddingRight="@dimen/espaco_tela"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanho_zero"
            android:layout_weight="12"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/tamanho_label_clique"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                style="@style/TextoTituloTelas"
                android:text="@string/label_participe_gpm"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanho_zero"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanho_faixa"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanho_faixa"
                android:layout_marginLeft="30dp"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanho_zero"
            android:layout_weight="60"
            android:orientation="vertical"
            android:gravity="center_horizontal|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                style="@style/TextoTelas"
                android:text="@string/label_dados_participacao"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamanho_zero"
            android:layout_weight="25"
            android:orientation="vertical"
            android:gravity="center_horizontal|bottom">

            <Button
                android:id="@+id/cmdContinuarAgora"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanho_botao"
                style="@style/BotoesTelas"
                android:text="@string/botao_continuar_agora"/>

            <Button
                android:id="@+id/cmdJaPossuiConta"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tamanho_botao"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                style="@style/BotoesTelas"
                android:text="@string/botao_ja_possui_conta"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>